--- a/tools/relay-spam/config.yml.example
+++ b/tools/relay-spam/config.yml.example
@@ -1,10 +1,12 @@
 # Example config.yml for relay-spam tool
-data_dir: ~/.poktroll
+datadir: ~/.poktroll
 
-# Global application stake goal - used for all applications
+# Stake goals for different entity types
 application_stake_goal: 1000000upokt
+supplier_stake_goal: 1000000upokt
+service_stake_goal: 1000000upokt
 
-# Global application fund goal - used for funding all applications
+# Funding goals for entities
 application_fund_goal: 2000000upokt
 
 # Chain ID for transactions
@@ -21,7 +23,7 @@ gateway_urls:
   pokt1tgfhrtpxa4afeh70fk2aj6ca4mw84xqrkfgrdl: http://localhost:8081
   pokt15vzxjqklzjtlz7lahe8z2dfe9nm5vxwwmscne4: http://anvil.localhost:3000/v1
 
-tx_flags_template:
+txflagstemplate:
   chain-id: poktroll
   gas: auto
   gas-adjustment: 1.5
@@ -30,19 +32,29 @@ tx_flags_template:
   yes: true
   keyring-backend: test
 
-application_defaults:
-  stake: 1000000upokt
-  service_id: svc1qjpxsjkz0kujcvdlxm2wkjv5m4g0p9k
-  gateways:
-    - http://localhost:8081
-    - http://localhost:8082
-
 # Applications will be populated by the 'populate' command
 # or you can manually add them here
 applications:
   - name: relay_spam_app_0
     address: pokt18wmctmhu49csyy6j0eyhmua63rvlwgc8hddg2c
     mnemonic: certain monitor elephant guard must vacant magnet present bacon scare social cattle enact average stairs orient disorder whisper frame banner version open spray brother
-    serviceidgoal: svc1qjpxsjkz0kujcvdlxm2wkjv5m4g0p9k
+    serviceidgoal: anvil
     delegateesgoal:
-      - pokt1tgfhrtpxa4afeh70fk2aj6ca4mw84xqrkfgrdl 
+      - pokt1tgfhrtpxa4afeh70fk2aj6ca4mw84xqrkfgrdl
+
+# Services configuration
+# Add services that applications can stake to
+services:
+  - name: anvil_service
+    address: pokt1abcdefghijklmnopqrstuvwxyz0123456789abcdef
+    mnemonic: example mnemonic for service account goes here
+    serviceid: anvil
+
+# Suppliers configuration
+# Add suppliers that can stake to services
+suppliers:
+  - name: anvil_supplier
+    address: pokt1fedcba9876543210abcdefghijklmnopqrstuvwxyz
+    mnemonic: example mnemonic for supplier account goes here
+    services:
+      - anvil 
