--- a/.env.dev
+++ b/.env.dev
@@ -2,7 +2,7 @@
 # It is a copy of what's in the Makefile but makes local development easier through
 # a simple `source .env.dev` command.
 
-POKTROLLD_HOME=./localnet/pocketd
+POCKETD_HOME=./localnet/pocketd
 # The pocket node (validator in the localnet context)
 POCKET_NODE=tcp://127.0.0.1:26657
 # TestNet RPC endpoint for validator maintained by Grove. Needs to be updated if there's another "primary" testnet.
