--- a/.github/workflows/release-artifacts.yml
+++ b/.github/workflows/release-artifacts.yml
@@ -63,7 +63,8 @@ jobs:
           DOCKER_METADATA_PR_HEAD_SHA: "true"
         with:
           images: |
-            ghcr.io/pokt-network/pocketd
+            ghcr.io/pokt-network/poktrolld
+          # TODO_MAINNET_MIGRATION(@okdas): s/poktroll/pocket
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
@@ -80,7 +81,8 @@ jobs:
           DOCKER_METADATA_PR_HEAD_SHA: "true"
         with:
           images: |
-            ghcr.io/pokt-network/pocketd
+            ghcr.io/pokt-network/poktrolld
+          # TODO_MAINNET_MIGRATION(@okdas): s/poktroll/pocket
           tags: |
             type=raw,value=main-prod
             type=sha,suffix=-main-prod
@@ -100,7 +102,8 @@ jobs:
           DOCKER_METADATA_PR_HEAD_SHA: "true"
         with:
           images: |
-            ghcr.io/pokt-network/pocketd
+            ghcr.io/pokt-network/poktrolld
+          # TODO_MAINNET_MIGRATION(@okdas): s/poktroll/pocket
           tags: |
             type=raw,value=${{ env.BRANCH_NAME }}-prod${{ github.inputs.custom_tag != '' && format('-{0}', github.inputs.custom_tag) || '' }}
             type=sha,suffix=-${{ env.BRANCH_NAME }}-prod${{ github.inputs.custom_tag != '' && format('-{0}', github.inputs.custom_tag) || '' }}
