--- a/.env.dev
+++ b/.env.dev
@@ -6,7 +6,8 @@ POCKETD_HOME=./localnet/pocketd
 # The pocket node (validator in the localnet context)
 POCKET_NODE=tcp://127.0.0.1:26657
 # TestNet RPC endpoint for validator maintained by Grove. Needs to be updated if there's another "primary" testnet.
-TESTNET_RPC=https://testnet-validated-validator-rpc.pocket.com/
+# TODO_MAINNET_MIGRATION(@okdas): s/poktroll/pocket
+TESTNET_RPC=https://testnet-validated-validator-rpc.poktroll.com/
 PATH_URL=http://localhost:3000
 POCKET_ADDR_PREFIX=pokt
 CHAIN_ID=pocket
