--- a/config.yml
+++ b/config.yml
@@ -131,6 +131,7 @@ validators:
 # We can persist arbitrary genesis values via 1 to 1 mapping to genesis.json
 genesis:
   app_name: pocket
+  chain_id: pocket
   app_state:
     # https://docs.cosmos.network/main/build/modules/mint
     mint:
